# robot_sclad

./: README.md
asm_robot/: CMakeLists.txt  package.xml
asm_robot/arduino/Odom/: Odom.ino
sclad_robot/: CMakeLists.txt  package.xml
sclad_robot/config/: base_config.rviz
sclad_robot/launch/: rviz.launch  sclad_robot_launch_with_navx.launch
sclad_robot/urdf/: sclad_robot_base_model.urdf  sclad_robot_base_model_with_imu.urdf
